# codegen

./: .gitmodules  CMakeLists.txt
include/codegen/: CodeHolder.h  ControlFlowGraph.h  Execute.h  FunctionBuilder.h  IR.h  Immediate.h  LabelMap.h  LivenessData.h  OpCodes.h  PostProcessGroup.h  Scope.h  SourceLocation.h  SourceMap.h  TestBackend.h  Value.h  types.h
include/codegen/interfaces/: IBackend.h  ILogHandler.h  IPostProcessStep.h  IWithLogging.h
include/codegen/optimize/: CommonSubexpressionElimination.h  ConstantFolding.h  CopyPropagation.h  DeadCodeElimination.h  Optimize.h  ReduceMemoryAccessStep.h
src/: CodeHolder.cpp  ControlFlowGraph.cpp  Execute.cpp  FunctionBuilder.cpp  FunctionBuilderInstructions.cpp  IR.cpp  Immediate.cpp  LabelMap.cpp  LivenessData.cpp  PostProcessGroup.cpp  Scope.cpp  SourceMap.cpp  TestBackend.cpp  Value.cpp
src/interfaces/: IBackend.cpp  ILogHandler.cpp  IPostProcessStep.cpp  IWithLogging.cpp
src/optimize/: CommonSubexpressionElimination.cpp  ConstantFolding.cpp  CopyPropagation.cpp  DeadCodeElimination.cpp  Optimize.cpp  ReduceMemoryAccessStep.cpp
test/: CMakeLists.txt  Common.cpp  Common.h  TestObjectValue.cpp  TestPrimitiveValue.cpp  TestValue.cpp  main.cpp  main.old.cpp
